<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameDashboardActivity">

    <!-- PROGRESS SHOULD BE DYNAMIC
            Since we are going to set up the app as a continuous story
            of the three games A->B->C then Progress just states which game
            was last completed. Progress starts at 0.
            ie if you completed A then progress is 2, if you quit app during C then
            when you reopen progress is 2. When Progress is 3 the round is complete.
            Keep at 3 until player starts new round. -->

    <ImageButton
        android:id="@+id/ballGameButton"
        android:layout_width="76dp"
        android:layout_height="77dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="236dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ballGameButtonDescrioption"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardGameButton"
        app:srcCompat="@drawable/ballgame_player" />

    <ImageButton
        android:id="@+id/cardGameButton"
        android:layout_width="76dp"
        android:layout_height="77dp"
        android:layout_marginBottom="364dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cardGameButtonDescription"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/card_game_icon" />

    <ImageButton
        android:id="@+id/subwayGameButton"
        android:layout_width="76dp"
        android:layout_height="77dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="236dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/subwayGameButtonDescription"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardGameButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/subway_game_icon" />

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="98dp"
        android:layout_height="25dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:text="@string/highscore_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalScoreLabel"
        android:layout_width="111dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/total_score_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/highScoreDashboardStat"
        android:layout_width="98dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/totalScoreStat"
        android:layout_width="111dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/developersFooter"
        android:layout_width="390dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/developers"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/displayNameTextLabel"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/gameDashboardSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/developersFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:contentDescription="@string/settingButtonDescription" />

    <ImageButton
        android:id="@+id/switchMultiplayerDashboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:contentDescription="@string/multiplayer_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toEndOf="@+id/gameDashboardSettingsButton"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ToggleButton
        android:id="@+id/toggleGameModeButton"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:layout_marginTop="88dp"
        android:text="@string/toggle_game_button_mode"
        android:textOff="@string/timed_mode_button_label"
        android:textOn="@string/infinite_mode_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayNameTextLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>