<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultsPageActivity">

    <ImageButton
        android:id="@+id/statBallGameButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ballGameButtonDescrioption"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ballgame_player" />

    <Button
        android:id="@+id/resultsBackToDashboardButton"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:text="@string/results_back_to_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/statCardGameButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cardGameButtonDescription"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/card_game_icon" />

    <ImageButton
        android:id="@+id/statSubwayGameButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/subwayGameButtonDescription"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/subway_game_icon" />

    <TextView
        android:id="@+id/statP2Label"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_marginEnd="12dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/statP1Label"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statVSHistoryP1Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginTop="476dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statWinnerTGPP1Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginTop="420dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statSuccessP1Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginTop="148dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statTotalAttemptsP1Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginTop="276dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statFailP1Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginTop="212dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statHighScoreP1Label"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="344dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statScoreP2Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/statFailP2Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <TextView
        android:id="@+id/statSuccessP2Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/statTotalAttemptsP2Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <TextView
        android:id="@+id/statHighScoreP2Label"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/statWinnerTGPP2Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/statVSHistoryP2Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <TextView
        android:id="@+id/statScoreP1Label"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginTop="84dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statGameHeaderLabel"
        android:layout_width="102dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/statScoreLabel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/statHighScoreLabel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/statSuccessLabel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/statVSHistoryLabel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/statTotalAttemptsLabel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/statFailLabel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <TextView
        android:id="@+id/statWinnerTGPLabel"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

</androidx.constraintlayout.widget.ConstraintLayout>